--- a/src/assets/scss/_card.scss
+++ b/src/assets/scss/_card.scss
@@ -79,7 +79,7 @@
 
   &:first-child {
     @include border-radius(
-      $card-inner-border-radius $card-inner-border-radius 0 0
+      $card-inner-border-radius $card-inner-border-radius $card-inner-border-radius $card-inner-border-radius
     );
   }
 
